clean panel and profile view and editing address bar

--- a/Azmoonak/Areas/Admin/Views/Groups/Create.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Groups/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Azmoonak.Database.Models.Group
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Add Group | ایجاد گروه جدید";
     Layout = "~/Areas/Admin/Views/Shared/_PanelLayout.cshtml";
 }
 
