--- a/Azmoonak/Areas/Admin/Views/Groups/Details.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Groups/Details.cshtml
@@ -1,14 +1,13 @@
 ﻿@model Azmoonak.Database.Models.Group
 
 @{
-    ViewData["Title"] = Model.GroupName + "جزئیات";
+    ViewData["Title"] = "Group Details | جزئیات گروه";
     Layout = "~/Areas/Admin/Views/Shared/_PanelLayout.cshtml";
 }
 
-<h1 class="text-center">@Model.GroupName | جزئیات</h1>
 
 <div>
-    <h4 id="edit-mode" class="text-center text-white rounded-3 p-1"></h4>
+    <h4 id="edit-mode" class="text-center text-white rounded-3 mt-3 p-1"></h4>
     <hr />
     
     <dl class="row alert alert-info col-md-6 col-12">
