--- a/Azmoonak/Areas/Admin/Views/Groups/Edit.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Groups/Edit.cshtml
@@ -1,14 +1,13 @@
 ﻿@model Azmoonak.Database.Models.Group
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Group | ویرایش گروه";
     Layout = "~/Areas/Admin/Views/Shared/_PanelLayout.cshtml";
 }
 
-<h1 class="text-center">Edit</h1>
-
-<h5 class="text-center">Group</h5>
+<h1 class="text-center">Edit Group | ویرایش گروه</h1>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
