--- a/Azmoonak/Areas/Admin/Views/Panel/Details.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Azmoonak.Database.Models.User
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "User Details | جزئیات کاربر";
     Layout = "~/Areas/Admin/Views/Shared/_PanelLayout.cshtml";
 }
 
