--- a/Azmoonak/Areas/Admin/Views/Panel/EditUser.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/EditUser.cshtml
@@ -1,9 +1,14 @@
 ﻿@model Azmoonak.Core.ViewModels.EditUserViewModel
 
 @{
-    ViewData["Title"] = "EditUser";
+    ViewData["Title"] = "Edit User | ویرایش کاربر";
     Layout = "~/Areas/Admin/Views/Shared/_PanelLayout.cshtml";
 }
+
+<h1 class="text-center">Edit User | ویرایش کاربر</h1>
+<hr />
+
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="EditUser">
