--- a/Azmoonak/Areas/Admin/Views/Panel/GetUsers.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/GetUsers.cshtml
@@ -1,17 +1,21 @@
 ﻿@model IEnumerable<Azmoonak.Database.Models.User>
 
 @{
-    ViewData["Title"] = "GetUsers";
+    ViewData["Title"] = "Get Users | کاربران";
     Layout = "~/Areas/Admin/Views/Shared/_PanelLayout.cshtml";
 }
 
-<h1 class="mt-3">لیست کاربران</h1>
-<h5 class="mt-3">تعداد کاربران : @ViewBag.UserCount</h5> 
+<h1 class="text-center ">Users List | لیست کاربران</h1>
+<h5 class="text-center ">Users Count : @ViewBag.UserCount | تعداد کاربران : @ViewBag.UserCount</h5>
+<hr />
 
 
 <table class="table table-bordered table-striped table-dark mt-4 ">
     <thead class ="text-center">
         <tr>
+            <th>
+                <span class="fa fa-lg fa-sort-numeric-asc"></span>
+            </th>
             <th >
                 <span class="fa fa-lg fa-id-card-o"></span>
                 @Html.DisplayNameFor(model => model.FName)
@@ -47,9 +51,16 @@
         </tr>
     </thead>
     <tbody class="text-center">
+        @{
+            var number = 0;
+        }
         @foreach (var item in Model)
         {
+            number++;
             <tr>
+                <td>
+                    @number
+                </td>
                 <td >
                     @Html.DisplayFor(modelItem => item.FName)
                 </td>
