--- a/Azmoonak/Areas/Admin/Views/Panel/Index.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/Index.cshtml
@@ -1,9 +1,13 @@
 ﻿@model Azmoonak.Database.Models.User
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Admin Profile | پروفایل مدیر";
     Layout = "~/Areas/Admin/Views/Shared/_PanelLayout.cshtml";
 }
+
+<h1 class="text-center">Admin Profile | پروفایل مدیر</h1>
+<hr />
+
 
 <div>
     <h4 id="edit-mode" class="text-center text-white rounded-3 p-1" hidden></h4>
