--- a/Azmoonak/Areas/Admin/Views/Questions/Details.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Questions/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Azmoonak.Database.Models.Question
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Question Details | جزئیات سوال";
     Layout = "~/Areas/Admin/Views/Shared/_PanelLayout.cshtml";
 }
 
