--- a/Azmoonak/Areas/Admin/Views/Questions/Edit.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Questions/Edit.cshtml
@@ -1,13 +1,14 @@
 ﻿@model Azmoonak.Database.Models.Question
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Question | ویرایش سوال";
     Layout = "~/Areas/Admin/Views/Shared/_PanelLayout.cshtml";
 }
 
 <h1 class="text-center">Edit Question | ویرایش سوال</h1>
-
 <hr />
+
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
