--- a/Azmoonak/Views/Account/Login.cshtml
+++ b/Azmoonak/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Azmoonak.Core.ViewModels.LoginViewModel
 
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Login | ورود";
     Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
 
