--- a/Azmoonak/Views/Account/Register.cshtml
+++ b/Azmoonak/Views/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Azmoonak.Core.ViewModels.RegisterViewModel
 
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Register | ثبت نام";
     Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
 
