--- a/Azmoonak/Views/Exam/EndExam.cshtml
+++ b/Azmoonak/Views/Exam/EndExam.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Azmoonak.Core.ViewModels.QuestionUserViewModel
 
 @{
-    ViewData["Title"] = "EndExam";
+    ViewData["Title"] = "End Exam | پایان آزمون";
     Layout = "~/Views/Shared/_ExamLayout.cshtml";
 }
 
