--- a/Azmoonak/Views/Exam/StartExam.cshtml
+++ b/Azmoonak/Views/Exam/StartExam.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Azmoonak.Core.ViewModels.GroupQuestionViewModel
 
 @{
-    ViewData["Title"] = "GroupQuestion";
+    ViewData["Title"] = "Start Exam | شروع آزمون";
     Layout = "~/Views/Shared/_ExamLayout.cshtml";
 }
 
