--- a/Azmoonak/Views/Question/GroupQuestion.cshtml
+++ b/Azmoonak/Views/Question/GroupQuestion.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Azmoonak.Core.ViewModels.GroupQuestionViewModel
 
 @{
-    ViewData["Title"] = "GroupQuestion";
+    ViewData["Title"] = "Group Question | نمونه سوالات";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
