--- a/Azmoonak/Areas/Admin/Views/Questions/Create.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Questions/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Azmoonak.Database.Models.Question
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Add Question | ایجاد سوال جدید";
     Layout = "~/Areas/Admin/Views/Shared/_PanelLayout.cshtml";
 }
 
