--- a/Azmoonak/Views/Exam/ShowExamGroups.cshtml
+++ b/Azmoonak/Views/Exam/ShowExamGroups.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Azmoonak.Core.ViewModels.GroupQuestionViewModel
 
 @{
-    ViewData["Title"] = "ShowExamGroups";
+    ViewData["Title"] = "Show Exam Groups | نمایش دسته بندی سوالات";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
