--- a/Azmoonak/Views/Home/Index.cshtml
+++ b/Azmoonak/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Home | صفحه اصلی";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
