--- a/Azmoonak/Views/Profile/Index.cshtml
+++ b/Azmoonak/Views/Profile/Index.cshtml
@@ -1,8 +1,36 @@
-﻿
+﻿@model Azmoonak.Database.Models.User
+
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "User Profile | پروفایل کاربر";
     Layout = "~/Views/Shared/_ProfileLayout.cshtml";
 }
 
-<h1>پنل کاربر</h1>
+<h1 class="text-center">پنل کاربری</h1>
+<hr />
 
+<div>
+    <h4 id="edit-mode" class="text-center text-white rounded-3 p-1" hidden></h4>
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.LName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.LName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Mobile)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Mobile)
+        </dd>
+    </dl>
+</div>
+<div>
+    <a class="btn btn-warning rounded-2" @* asp-action="" asp-route-id="@Model?.Id" *@>ویرایش پروفایل</a>
+</div>
