--- a/Azmoonak/Views/Question/Index.cshtml
+++ b/Azmoonak/Views/Question/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Index" /* "Questions | سوالات" */;
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
