--- a/Azmoonak/Views/Profile/Index.cshtml
+++ b/Azmoonak/Views/Profile/Index.cshtml
@@ -32,5 +32,5 @@
     </dl>
 </div>
 <div>
-    <a class="btn btn-warning rounded-2" @* asp-action="" asp-route-id="@Model?.Id" *@>ویرایش پروفایل</a>
+    <a class="btn btn-warning rounded-2" asp-area="" asp-controller="profile" asp-action="Edit" asp-route-id="@Model?.Id"><span class="fa fa-lg fa-edit"></span> ویرایش پروفایل</a>
 </div>
