--- a/Azmoonak/Areas/Admin/Views/Panel/AdminDetails.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/AdminDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Azmoonak.Database.Models.User
 
 @{
-    ViewData["Title"] = "User Details | جزئیات کاربر";
+    ViewData["Title"] = "Admin Details | جزئیات مدیر";
     Layout = "~/Areas/Admin/Views/Shared/_PanelLayout.cshtml";
 }
 
@@ -28,24 +28,24 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Mobile)
         </dd>
-@*         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Password)
+                <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.Password)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Password)
-        </dd> *@
+        @Html.DisplayFor(model => model.Password)
+        </dd>
         @*         <dt class = "col-sm-2">
         @Html.DisplayNameFor(model => model.Code)
         </dt>
         <dd class = "col-sm-10">
         @Html.DisplayFor(model => model.Code)
         </dd> *@
-        <dt class="col-sm-2">
+        @* <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
-        <dd class="col-sm-10">
+        </dt> *@
+        @* <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IsActive)
-        </dd>
+        </dd> *@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Role)
         </dt>
@@ -55,7 +55,7 @@
     </dl>
 </div>
 <div>
-    <a asp-area="admin" asp-controller="panel" asp-action="EditUser" asp-route-id="@Model?.Id" class="btn btn-warning"><span class="fa fa-lg fa-edit"></span> ویرایش پروفایل</a> |
+    <a asp-action="EditAdminDashbord" asp-route-id="@Model?.Id" class="btn btn-warning"><span class="fa fa-lg fa-edit"></span> ویرایش پروفایل</a> |
     <a class="text-decoration-none btn btn-danger text-white" asp-action="Index"><span class="fa fa-angle-double-right fa-lg"></span> بازگشت</a>
 </div>
 
