--- a/Azmoonak/Areas/Admin/Views/Panel/Index.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/Index.cshtml
@@ -42,12 +42,12 @@
         <dd class = "col-sm-10">
         @Html.DisplayFor(model => model.Code)
         </dd> *@
-        <dt class="col-sm-2">
+      @*   <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IsActive)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IsActive)
-        </dd>
+        </dd> *@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Role.RoleName)
         </dt>
@@ -57,5 +57,7 @@
     </dl>
 </div>
 <div>
-    <a class="btn btn-warning rounded-2" @* asp-action="" asp-route-id="@Model?.Id" *@>ویرایش پروفایل</a>
+    <a class="btn btn-warning rounded-2" asp-area="admin" asp-controller="panel" asp-action="EditAdminDashbord" asp-route-id="@Model?.Id"><span class="fa fa-lg fa-edit"></span> ویرایش پروفایل</a>
+    <a class="btn btn-light rounded-2" asp-area="admin" asp-controller="groups" asp-action="Create"><span class="fa fa-lg fa-edit"></span> افزودن دسته بندی</a>
+    <a class="btn btn-light rounded-2" asp-area="admin" asp-controller="questions" asp-action="Create"><span class="fa fa-lg fa-edit"></span> افزودن سوال</a>
 </div>
