--- a/Azmoonak/Views/Home/BodyPartial.cshtml
+++ b/Azmoonak/Views/Home/BodyPartial.cshtml
@@ -58,7 +58,7 @@
             <div class="unveiling-box shadow  p-2">
 
 
-                <h4>نمونه سوالات</h4>
+                <h4>آزمون ها</h4>
 
 
                 <i class="fa fa-scale fa-file-archive-o fa-2x my-3  pointer"></i>
@@ -91,7 +91,7 @@
                 <p class="mx-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae fugit aliquid provident?</p>
 
 
-                <button class="btn w-75 btn-orenged mt-2">بیشتر</button>
+                <a asp-area="" asp-controller="question" asp-action="ShowExampleGroups" class="btn w-75 btn-orenged mt-2">بیشتر</a>
 
 
             </div>
@@ -102,7 +102,7 @@
 
         <div class="col d-flex my-2 justify-content-center p-0 m-0">
             <div class="unveiling-box shadow p-2">
-                <h4>نمونه سوالات</h4>
+                <h4>درباره ما</h4>
                 <i class="fa fa-scale fa-bar-chart fa-2x my-3  pointer"></i>
                 <p class="mx-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae fugit aliquid provident?</p>
                 <button class="btn w-75 btn-orenged mt-2">بیشتر</button>
