--- a/Azmoonak/Views/Shared/Footer.cshtml
+++ b/Azmoonak/Views/Shared/Footer.cshtml
@@ -24,9 +24,9 @@
                 <div class="row footer-uls">
                     <div class="col text-center">
                         <ul>
-                            <a href="#">
+                            <a asp-area="" asp-controller="exam" asp-action="showexamgroups">
                             <li class="mt-4 mx-2">آزمون ها</li></a>
-                            <a href="#">
+                            <a asp-area="" asp-controller="question" asp-action="showexamplegroups">
                             <li class="mt-4 mx-2">نمونه سوالات</li></a>
                             <a href="#">
                             <li class="mt-4 mx-2">راهنما</li></a>
